<resources>
    <string name="app_name">BE_School_App</string>
    <string name="title_activity_home">Home</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="button">Button</string>
    <string name="enter">ENTER</string>
    <string name="populate_database">Populate Database</string>
    <string name="delete_db_tables">Delete DB Tables</string>
    <string name="btn_enter">Enter</string>
    <string name="btn_popdb">Populate Database</string>
    <string name="btn_delDb">Delete DB Tables</string>
    <string name="courses">Courses:</string>
    <string name="asmts__tv_failed">No Data</string>
    <string name="failed">Failed:</string>
    <string name="asmts__tv_passed">No Data</string>
    <string name="passed">Passed:</string>
    <string name="assessments">Assessments:</string>
    <string name="courses__tv_dropped">No Data</string>
    <string name="courses__tv_completed">No Data</string>
    <string name="courses__tv_pending">No Data</string>
    <string name="asmts__tv_pending">No Data</string>
    <string name="pending">Pending:</string>
    <string name="dropped">Dropped:</string>
    <string name="completed">Completed:</string>
    <string name="pending_in_progress">Pending/In-Progress:</string>
    <string name="title_activity_term_list">TermListActivity</string>
    <string name="todo">TODO</string>
    <string name="title_activity_term_details">TermDetailsActivity</string>
    <string name="title_activity_course_details">CourseDetailsActivity</string>
    <string name="title_activity_edit_term">EditTermActivity</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="term_start">Term Start</string>
    <string name="term_end">Term End</string>
    <string name="status">Status</string>
    <string name="course_mentors">Course Mentors</string>
    <string name="course_notes">Course Notes</string>
    <string name="term_status">Term Status</string>
    <string name="title_activity_edit_assessment">EditAssessmentActivity</string>
    <string name="type">Type</string>
    <string name="asmt_type">Asmt_type</string>
    <string name="title">Title</string>
    <string name="apply_alarm">Apply Alarm</string>
    <string name="asmt_title">Asmt_title</string>
    <string name="delete_assessment">Delete Assessment</string>
    <string name="save">Save</string>
    <string name="asmt_info">Asmt_info</string>
    <string name="due_date">Due Date</string>
    <string name="alarm_date">Alarm Date</string>
    <string name="info">Info</string>
    <string name="assessment_type">Assessment Type</string>
    <string name="assessment_info">Assessment Info</string>
    <string name="assessment_title">Assessment Title</string>
    <string name="title_activity_mentors_list">MentorsListActivity</string>
    <string name="title_activity_edit_mentor">EditMentorActivity</string>
    <string name="new_course_mentor">New Course Mentor</string>
    <string name="new_phone_number">New Phone Number</string>
    <string name="new_mentor_email">New Mentor Email</string>
    <string name="delete_mentor">Delete Mentor</string>
    <string name="course_status">course status</string>
    <string name="coures_title">coures title</string>
    <string name="course_start">course start</string>
    <string name="course_end">course end</string>
    <string name="title_activity_edit_course">EditCourseActivity</string>
    <string name="courseEnd_date">End Date</string>
    <string name="course_start_date">Course Start Date</string>
    <string name="course_end_date">Course End Date</string>
    <string name="course_statusTV">Course Status</string>
    <string name="course_name">Course Name</string>
    <string name="courseStart_date">Start Date</string>
    <string name="apply_start_date_alarm">Apply Start Date Alarm</string>
    <string name="delete_course">Delete Course</string>
    <string name="apply_end_date_alarm">Apply End Date Alarm</string>
    <string name="title_activity_course_notes">CourseNotesActivity</string>
    <string name="send_via_sms_to">Send Via SMS To:</string>
    <string name="phone_number">Phone Number</string>
    <string name="notes">Notes...</string>
    <string name="cancel">Cancel</string>
    <string name="term_title">Term Title</string>
    <string name="edit_start_date">Start Date</string>
    <string name="edit_end_date">End Date</string>
    <string name="delete">Delete</string>
</resources>