<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editMentorConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6252222"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".EditMentorActivity"
    tools:deviceIds="wear">

    <EditText
        android:id="@+id/txtMentorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="92dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/new_course_mentor"
        android:inputType="textPersonName"
        android:text="@string/new_course_mentor"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtMentorEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/new_mentor_email"
        android:inputType="textEmailAddress"
        android:text="@string/new_mentor_email"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMentorPhone"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtMentorPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/new_phone_number"
        android:inputType="phone"
        android:text="@string/new_phone_number"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMentorName"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnDelMentor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#BF4040"
        android:text="@string/delete_mentor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSaveMentor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#BF4040"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>